// tag::header[]
= Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog]),
and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].
// end::header[]

:unreleased: https://github.com/rackslab/fatbuildr/compare/v1.0.0...HEAD
:v100: https://github.com/rackslab/fatbuildr/releases/tag/v1.0.0

== {unreleased}[Unreleased]

=== Added
* docs: add large Fatbuildr logos intended for docs.rackslab.io landing page
* docs: add Release notes page based on CHANGELOG.adoc
* conf: add env_as_root boolean parameter in format:{deb,rpm} section to control
  if commands to create and update build environments are executed as root
  super-user or the user running fatbuildrd daemon.
* pkgs: add CHANGELOG.adoc in {deb,rpm} packages

=== Fixed
* pkgs: remove useless symbolic link in pre
* cli: avoid catching unwanted AttributeError exceptions while checking for
  action argument on Python < 3.7.

=== Changed
* pkgs:
** Bump the packaged version of mkosi from 13 to 14
** Update Fatbuildr packages to depend on mkosi >= 14
* conf: rename mkosi --skeleton option to --skeleton-tree to follow mkosi 14
  change
* docs: set more generic names for packages repositories in install guide
* conf: bump Fedora release from 35 to 37 in rpm and osi container images

== {v100}[1.0.0] - 2022-09-05